--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,7 @@
+set (CMAKE_CXX_STANDARD 17)
+set (CMAKE_CXX_STANDARD_REQUIRED TRUE)
+
 add_subdirectory (pack-assets)
+add_subdirectory (asset-locator)
+
 add_subdirectory (mr-octopus)
