Polish assets, start integrating text output

--- a/src/asset-locator/CMakeLists.txt
+++ b/src/asset-locator/CMakeLists.txt
@@ -1,45 +1,28 @@
-set (asset_header_name asset_locator.hpp)
-set (asset_source_name asset_locator.cpp)
-
-set (asset_header "${CMAKE_CURRENT_BINARY_DIR}/generated/${asset_header_name}")
-set (asset_source "${CMAKE_CURRENT_BINARY_DIR}/generated/${asset_source_name}")
-
-set (asset_header_link
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/${asset_header_name}")
-set (asset_source_link "${CMAKE_CURRENT_SOURCE_DIR}/${asset_source_name}")
+set (asset_file_name assets.inc)
+set (asset_file "${CMAKE_CURRENT_BINARY_DIR}/generated/${asset_file_name}")
+set (asset_file_link "${CMAKE_CURRENT_SOURCE_DIR}/include/${asset_file_name}")
 
 add_custom_command (
-    OUTPUT "${asset_header}" "${asset_source}"
+    OUTPUT "${asset_file}"
     COMMAND pack-assets
         --source-assets "${PROJECT_SOURCE_DIR}/assets"
         --target-assets "${PROJECT_BINARY_DIR}/assets"
-        --header "${asset_header}"
-        --source "${asset_source}"
+        --output "${asset_file}"
     DEPENDS pack-assets
-    COMMENT
-        "generating assets: '${PROJECT_SOURCE_DIR}' -> '${PROJECT_BINARY_DIR}'\n\
-    header: '${asset_header}'\n    source: '${asset_source}'"
+    COMMENT "packing assets: '${PROJECT_SOURCE_DIR}' -> '${PROJECT_BINARY_DIR}'"
+    COMMENT "also generating asset file: '${asset_file}'"
 )
 
 add_custom_command (
-    OUTPUT "${asset_header_link}"
+    OUTPUT "${asset_file_link}"
     COMMAND ${CMAKE_COMMAND} -E create_symlink
-        "${asset_header}" "${asset_header_link}"
-    DEPENDS "${asset_header}"
-    COMMENT "creating asset header link"
-)
-
-add_custom_command (
-    OUTPUT "${asset_source_link}"
-    COMMAND ${CMAKE_COMMAND} -E create_symlink
-        "${asset_source}" "${asset_source_link}"
-    DEPENDS "${asset_source}"
-    COMMENT "creating asset source link"
+        "${asset_file}" "${asset_file_link}"
+    DEPENDS "${asset_file}"
+    COMMENT "creating asset file link: '${asset_file_link}'"
 )
 
 add_custom_target (run-pack-assets
-    DEPENDS "${asset_header_link}" "${asset_source_link}"
-    COMMENT "assets custom target"
+    DEPENDS "${asset_file_link}"
 )
 
 add_library (asset-locator
