--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "deps/argo"]
 	path = deps/argo
 	url = https://github.com/ecosnail/argo
+[submodule "deps/tail"]
+	path = deps/tail
+	url = git@github.com:ecosnail/tail.git
+[submodule "deps/flat"]
+	path = deps/flat
+	url = git@github.com:ecosnail/flat.git
+[submodule "deps/tempo"]
+	path = deps/tempo
+	url = https://github.com/ecosnail/tempo.git
